# bugcrowd-vrt

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  SCANNER_INTEGRATION.md  cvss_v3.json  cvss_v3.schema.json  cwe.mappings.json  cwe.schema.json  vrt.json
examples/: cvss_v3_mapping.rs  cwe_mapping.rs  load_vrt.rs  scanner_integration.rs
src/: categorization.rs  cvss_v3.rs  cwe_mapping.rs  lib.rs  types.rs
tests/: cvss_v3_tests.rs  cwe_mapping_tests.rs  edge_cases_tests.rs  types_tests.rs  vrt_tests.rs
