[package]
name = "bugcrowd-vrt"
version = "1.17.0"
edition = "2024"
description = "Rust client for Bugcrowd's Vulnerability Rating Taxonomy"
license = "MIT"
repository = "https://github.com/akses0/bugcrowd-vrt"
homepage = "https://trapdoorsec.com"

[lib]
name = "bugcrowd_vrt"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"



[dev-dependencies]
tokio = { version = "1", features = ["full", "macros"] }